force-app/main/default/objects/Session__c/fields/CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Score__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>