force-app/main/default/objects/Session__c/fields/Number_of_Registered_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Registered_Attendee__c</fullName>
    <label>Number of Registered Attendee</label>
    <summaryForeignKey>Session_Registration__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>