force-app/main/default/objects/Session__c/fields/Overlapping__c.field-meta.xml
<CustomField>
    <fullName>Overlapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overlapping</label>
    <type>Checkbox</type>
</CustomField>