force-app/main/default/objects/Session__c/fields/Public_Event__c.field-meta.xml
<CustomField>
    <fullName>Public_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Public Event</label>
    <referenceTo>Public_Event__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>