force-app/main/default/objects/Session__c/fields/Room_Capacity_For_VIPs__c.field-meta.xml
<CustomField>
    <fullName>Room_Capacity_For_VIPs__c</fullName>
    <formula>Room__r.Room_Capacity_For_VIPs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Capacity For VIPs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>