force-app/main/default/objects/Session__c/validationRules/Compare_Start_and_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Compare_Start_and_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date_Time__c  &gt;=  End_Date_Time__c</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>End date must be greater than Start date</errorMessage>
</ValidationRule>