force-app/main/default/objects/Session__c/validationRules/Session_Room_Overlap.validationRule-meta.xml
<ValidationRule>
    <fullName>Session_Room_Overlap</fullName>
    <active>true</active>
    <errorConditionFormula>Overlapping__c</errorConditionFormula>
    <errorMessage>Room is not available for given time frame.</errorMessage>
</ValidationRule>