force-app/main/default/objects/Session__c/validationRules/Validate_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Date</fullName>
    <active>true</active>
    <errorConditionFormula>OR
(
 Start_Date_Time__c &lt; Public_Event__r.Start_Date__c,
 Start_Date_Time__c &gt; Public_Event__r.End_Date__c,
 End_Date_Time__c &lt; Public_Event__r.Start_Date__c,
 End_Date_Time__c &gt; Public_Event__r.End_Date__c 
)</errorConditionFormula>
    <errorMessage>Session&apos;s start and end date/time should be between Event&apos;s start and end date/time</errorMessage>
</ValidationRule>