force-app/main/default/objects/Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Public_Event__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Level__c</columns>
    <columns>Is_Mandatory__c</columns>
    <columns>CSAT_Score__c</columns>
    <columns>Number_of_Registered_Attendee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>